# ci_cd_semantic

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  COMPARATIF_OUTILS.md  Dockerfile  PROBLEMES_DETECTES.md  README.md  VEILLE_CICD.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: auto-approve.yml  build.yml  ci.yml  docs.yml  release.yml  sync-develop.yml
api/models/: index.html
api/routes/: index.html
api/services/: index.html
app/: database.py  main.py
app/routes/: items.py
app/services/: item_service.py
changelog/: index.html
cicd/: index.html
docs/: changelog.md  cicd.md  getting-started.md  index.md
docs/api/: models.md  routes.md  services.md
getting-started/: index.html
search/: search_index.json
tests/: conftest.py  test_items.py
