[project]
name = "training-ci-cd-semantic-release"
version = "0.1.0"
description = "CRUD API with PostgreSQL for managing items"
requires-python = ">=3.13"

# ============================================================================
# DEPENDENCIES
# ============================================================================
dependencies = [
    "fastapi[standard]>=0.121.0",
    "psycopg2-binary>=2.9.11",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "bandit>=1.8.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "python-semantic-release>=9.15.0",
    "ruff>=0.9.0",
    "safety>=3.3.0",
    "types-psycopg2>=2.9.0",
]

# ============================================================================
# RUFF
# ============================================================================
[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ============================================================================
# MYPY
# ============================================================================
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

# ============================================================================
# PYTEST
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--strict-markers --cov=app --cov-report=term-missing"

# ============================================================================
# SEMANTIC RELEASE
# ============================================================================
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = false

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.develop]
match = "develop"
prerelease = true
prerelease_token = "rc"

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = ["^chore", "^ci", "^docs", "^style", "^test"]

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "style", "test", "docs", "build", "ci", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
name = "origin"
type = "github"

[tool.semantic_release.publish]
dist_glob_patterns = []
upload_to_vcs_release = true
